workspace changes + previous comit's